generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider = "postgresql"
  url      = env("DATABASE_URL")
}

model User {
  id                String   @id @default(uuid())
  registryCognitoSub String?  @unique
  googleCognitoSub   String?  @unique
  email             String   @unique
  name              String?
  createdAt         DateTime @default(now())
  practices         Practice[]
}

model Verb {
  id       String    @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name     String
  contexts Context[]
  conjugations Conjugation[]
  irregulars Irregular[]
  practices Practice[]
}

model Tense {
  id          String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name        String
  conjugations Conjugation[]
  irregulars  Irregular[]
  timeMarkers TimeMarker[]
  practices   Practice[]
}

model Subject {
  id          String       @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  name        String
  conjugations Conjugation[]
  practices   Practice[]
}

model Practice {
  id        String   @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  userId    String   @map("user_id")
  verbId    String   @map("verb_id") @db.Uuid
  tenseId   String   @map("tense_id") @db.Uuid
  subjectId String   @map("subject_id") @db.Uuid
  success   Boolean
  createdAt DateTime @default(now()) @map("created_at")

  user    User    @relation(fields: [userId], references: [id], onDelete: Cascade)
  verb    Verb    @relation(fields: [verbId], references: [id], onDelete: Cascade)
  tense   Tense   @relation(fields: [tenseId], references: [id], onDelete: Cascade)
  subject Subject @relation(fields: [subjectId], references: [id], onDelete: Cascade)
}

model Context {
  id     String @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  verbId String @map("verb_id") @db.Uuid
  text   String

  verb Verb @relation(fields: [verbId], references: [id], onDelete: Cascade)
}

model Conjugation {
  verbId    String @map("verb_id") @db.Uuid
  subjectId String @map("subject_id") @db.Uuid
  tenseId   String @map("tense_id") @db.Uuid
  text      String

  verb    Verb    @relation(fields: [verbId], references: [id], onDelete: Cascade)
  subject Subject @relation(fields: [subjectId], references: [id], onDelete: Cascade)
  tense   Tense   @relation(fields: [tenseId], references: [id], onDelete: Cascade)

  @@id([verbId, subjectId, tenseId])
}

model Irregular {
  id      String @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  verbId  String @map("verb_id") @db.Uuid
  tenseId String @map("tense_id") @db.Uuid

  verb  Verb  @relation(fields: [verbId], references: [id], onDelete: Cascade)
  tense Tense @relation(fields: [tenseId], references: [id], onDelete: Cascade)

  @@unique([verbId, tenseId])
}

model TimeMarker {
  id       String @id @default(dbgenerated("gen_random_uuid()")) @db.Uuid
  text     String
  placement String
  tenseId  String @map("tense_id") @db.Uuid

  tense Tense @relation(fields: [tenseId], references: [id], onDelete: Cascade)
}